modulos_packages_possiveis_erros

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.history
 /.lh
 Python_Functions_Dictionaries_Modules/nunca64_package/__pycache__/modulo.cpython-310.pyc
+Python_Functions_Dictionaries_Modules/nunca64_package/__pycache__/modulo_b.cpython-310.pyc
